meetup/force-app/main/default/objects/Meetup__c/fields/RegistrationCode__c.field-meta.xml
<CustomField>
    <fullName>RegistrationCode__c</fullName>
    <description>The code used to register for a meetup.</description>
    <label>Registration Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>