meetup/force-app/main/default/objects/Meetup__c/listViews/Open_Meetups.listView-meta.xml
<ListView>
    <fullName>Open_Meetups</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open Meetups</label>
</ListView>